--- a/theme/next_responsive/less/header.less
+++ b/theme/next_responsive/less/header.less
@@ -1,7 +1,7 @@
-.navbar-inner-dyn{
-	//background:@black;
-	//#gradient .vertical(@greyDark, @black);
-	padding:0;
+@media(min-width:767px){
+	.navbar-inner-dyn{
+		padding:0;
+	}
 }
 .menu-btn{
 	padding: 0 15px 5px;
